--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
         "vite": "^5.0.3",
         "zod": "^3.23.8"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "flowbite": "^2.3.0",
+        "flowbite-svelte": "^0.46.1"
+    }
 }
