--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "type": "module",
     "dependencies": {
+        "axios": "^1.7.2",
         "flowbite": "^2.3.0",
         "flowbite-svelte": "^0.46.1"
     }
