--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "type": "module",
     "dependencies": {
         "axios": "^1.7.2",
+        "dotenv": "^16.4.5",
         "flowbite": "^2.3.0",
         "flowbite-svelte": "^0.46.1"
     }
